--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:pre": "tsc -b && vite build --mode pre",
     "build:prod": "tsc -b && vite build --mode prod",
     "preview": "vite preview",
-    "preinstall": "simple-git-hooks"
+    "preinstall": "simple-git-hooks",
+    "check": "biome check --write"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.141.6",
@@ -30,6 +31,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.10",
     "@eslint/js": "^9.39.2",
     "@tanstack/router-plugin": "^1.141.7",
     "@types/node": "^24.10.4",
@@ -57,5 +59,11 @@
     "overrides": {
       "vite": "npm:rolldown-vite@7.2.5"
     }
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*": "npm run check"
   }
 }
