feat: layout and theme

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,8 +26,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"],
-      "~comp/*": ["src/component/*"],
-      "~icon/*": ["src/icon/*"]
+      "~comps/*": ["src/components/*"],
+      "~icons/*": ["src/icons/*"]
     }
   },
   "include": ["src"]
