--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "build:pre": "tsc -b && vite build --mode pre",
     "build:prod": "tsc -b && vite build --mode prod",
     "preview": "vite preview",
-    "preinstall": "simple-git-hooks",
+    "prepare": "simple-git-hooks",
     "check": "biome check --write"
   },
   "dependencies": {
+    "@bprogress/react": "^1.2.7",
     "@tanstack/react-router": "^1.141.6",
     "@tanstack/react-router-devtools": "^1.141.6",
     "antd": "^6.1.1",
     "axios": "^1.13.2",
+    "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
     "i18next": "^25.7.3",
     "jsencrypt": "^3.5.4",
+    "lodash-es": "^4.17.22",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-fast-marquee": "^1.6.5",
+    "react-i18next": "^16.5.0",
     "ts-md5": "^2.0.1",
     "unocss-merge": "^0.6.0",
     "usehooks-ts": "^3.1.1",
@@ -32,7 +36,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
+    "@iconify-json/line-md": "^1.2.11",
+    "@iconify-json/lucide": "^1.2.79",
+    "@iconify-json/solar": "^1.2.5",
     "@tanstack/router-plugin": "^1.141.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.10.4",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
@@ -41,6 +49,7 @@
     "globals": "^16.5.0",
     "lint-staged": "^16.2.7",
     "react-scan": "^0.4.3",
+    "sass": "^1.97.0",
     "simple-git-hooks": "^2.13.1",
     "typescript": "~5.9.3",
     "unocss": "^66.5.10",
@@ -60,6 +69,8 @@
     "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
-    "*": "npm run check"
+    "*.{js,ts,jsx,tsx,json,css,scss,html}": [
+      "biome check --write --no-errors-on-unmatched"
+    ]
   }
 }
