--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,6 +26,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"],
+      "@/*": ["src/*"],
       "~comps/*": ["src/components/*"],
       "~icons/*": ["src/icons/*"]
     }
