--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "jsencrypt": "^3.5.4",
     "lodash-es": "^4.17.22",
     "react": "^19.2.3",
+    "react-currency-input-field": "^4.0.3",
     "react-dom": "^19.2.3",
     "react-fast-marquee": "^1.6.5",
     "react-i18next": "^16.5.0",
     "ts-md5": "^2.0.1",
     "unocss-merge": "^0.6.0",
     "usehooks-ts": "^3.1.1",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@iconify-json/lucide": "^1.2.79",
     "@iconify-json/solar": "^1.2.5",
     "@tanstack/router-plugin": "^1.141.7",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.10.4",
     "@types/react": "^19.2.7",
