--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@bprogress/react": "^1.2.7",
+    "@tanstack/react-form": "^1.27.5",
     "@tanstack/react-router": "^1.141.6",
     "@tanstack/react-router-devtools": "^1.141.6",
     "antd": "^6.1.1",
