--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.141.6",
     "@tanstack/react-router-devtools": "^1.141.6",
+    "ahooks": "^3.9.6",
     "antd": "^6.1.1",
     "axios": "^1.13.2",
     "copy-to-clipboard": "^3.3.3",
